# polymul

./: .gitignore  AGENTS.md  AUTORESEARCH.md  CONTRIBUTING.md  Cargo.toml  README.md  RESULTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bench.yml  merge.yml  pages.yml  score-gate.yml  scorekeeper.yml  verify.yml
benches/: poly_mul.rs
docs/: app.js  index.html  styles.css
docs/data/: leaderboard.json
fixtures/: baselines.tsv  pairs.tsv
history/: README.md
history/entries/: 0001-baseline.md  0002--10d9e.md  0003--10d9e.md  0004--10d9e.md  0005--10d9e.md  0006--10d9e.md  0007--10d9e.md  0008--10d9e.md  0009--10d9e.md  0010--10d9e.md  0011--10d9e.md  0012--10d9e.md  0013--10d9e.md  0014--10d9e.md  0015--10d9e.md  0016--10d9e.md  0017--10d9e.md  0018--10d9e.md  0019--10d9e.md  0020--10d9e.md  0021--10d9e.md  0022--10d9e.md  0023--10d9e.md  0024--10d9e.md  0025--10d9e.md  0026--10d9e.md  0027--10d9e.md  0028--10d9e.md  0029--10d9e.md  0030--10d9e.md  0031--10d9e.md  0032--10d9e.md  0033--10d9e.md  0034--10d9e.md  0035--10d9e.md  0036--10d9e.md  0037--10d9e.md  0038--10d9e.md  0039--10d9e.md  0040--10d9e.md  (+24 more)
metrics/: Cargo.toml
metrics/host/: Cargo.toml
metrics/wasm/: Cargo.toml
scripts/: build-leaderboard.py  ci-best-score.sh  ci-parse-pr-body.sh  ci-publish.sh  ci-score-gate.sh  ci-score.sh  ci-update-baseline.sh  evaluate.sh  guard-pr.sh  guard.sh  measure-complexity.sh  record.sh  submit.sh
src/: lib.rs  main.rs
src/algorithm/: mod.rs
src/harness/: eval.rs  fixtures.rs  mod.rs  reference.rs
tests/: correctness.rs
(+2 files in other folders)
