[package]
name = "polymul"
version = "0.1.0"
edition = "2021"
description = "Negacyclic polynomial multiplication autoresearch harness (TFHE-relevant)"

[lib]
name = "polymul"
path = "src/lib.rs"

[[bin]]
name = "polymul"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
