[package]
name = "polymul"
version = "0.1.0"
edition = "2021"
description = "Negacyclic polynomial multiplication autoresearch harness (TFHE-relevant)"

[lib]
name = "polymul"
path = "src/lib.rs"

[[bin]]
name = "polymul"
path = "src/main.rs"

[dev-dependencies]
criterion = "0.5"

# Wall-clock timing benchmark (complements the deterministic WORK metric).
# Dev-dependency only: it never affects the algorithm build or the wasm meter.
[[bench]]
name = "poly_mul"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
